...
    val scrollBehavior = TopAppBarDefaults.enterAlwaysScrollBehavior()
    val showPopup = remember { mutableStateOf(false) }
    Scaffold(
        modifier = Modifier.nestedScroll(scrollBehavior.nestedScrollConnection),
        topBar = {
            PopcornPicksTopAppBar(
                titleText = "Profile",
                navigationIcon = {
                    Icon(
                        modifier = Modifier
                            .padding(16.dp)
                            .size(36.dp)
                            .clip(CircleShape)
                            .clickable {
                                onAction(ProfileAction.OnBackClicked)
                            },
                        imageVector = Icons.AutoMirrored.Default.KeyboardArrowLeft,
                        contentDescription = "Arrow back",
                        tint = Color.White
                    )
                },
                scrollBehavior = scrollBehavior
            )
        }
...
                        showPopup.value = true
                    },
                    imageId = state.profileImageStyle?.imageId ?: profileImages[0]
                )
                Spacer(modifier = Modifier.height(14.dp))
                Text(
                    text = "YOU",
                    color = Color.White,
                    fontWeight = FontWeight.Medium,
                    fontSize = 20.sp,
                    maxLines = 1,
                    overflow = TextOverflow.Ellipsis
                )
...
            .padding(horizontal = 8.dp)
    ) {
        Text(
            modifier = Modifier
                .padding(14.dp)
                .align(Alignment.Center),
            text = "Movies",
            fontSize = 24.sp,
            maxLines = 1,
            color = Color.White
        )
        Icon(
            modifier = Modifier
...
